ingress/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: app1-ingress
  annotations:
    cloud.google.com/load-balancer-type: "External"
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /test123
            backend:
              serviceName: app1-service
              servicePort: 80
          - path: /test456
            backend:
              serviceName: app2-service
              servicePort: 80
